@@ -52,6 +52,7 @@
   &nbsp;&nbsp;<a href="reference/building.html" target="mainFrame">Building Ibator from Source</a><br/>
   &nbsp;&nbsp;<a href="reference/extending.html" target="mainFrame">Extending Ibator</a><br/>
   &nbsp;&nbsp;<a href="reference/pluggingIn.html" target="mainFrame">Implementing Ibator Plugins</a><br/>
+  &nbsp;&nbsp;<a href="reference/attributes.html" target="mainFrame">Introspected Table Attributes</a><br/>
   &nbsp;&nbsp;<a href="reference/logging.html" target="mainFrame">Logging Information</a><br/>
   <a href="philosophy.html" target="mainFrame">Design Philosophy</a><br/>
   <a href="license.html" target="mainFrame">Licensing Information</a><br/>
