@@ -1,0 +1,60 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+ "http://www.w3c.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+  <title>Introspected Table Attributes</title>
+  <link type="text/css" rel="stylesheet" href="../ibator.css"/>
+</head>
+<body>
+
+<div class="menuNav">
+  <p>
+    <a href="../index.html" target="_top">Show Menu</a>
+    <a href="attributes.html" target="_top">Hide Menu</a>
+  </p>
+</div>
+
+<h1>Introspected Table Attributes</h1>
+<p>After the database introspection step, and before code generation begins,
+   Ibator calculates many attributes that are used by the actual code generators.
+   Plugins can override any of these attributes before code generation by
+   implementing the <code>initialized</code> method.</p>
+
+<table cellspacing="0" cellpadding="5" border="1">
+  <tr>
+    <th>Attribute</th>
+    <th>Details</th>
+  </tr>
+  <tr>
+    <td valign="top">ATTR_BASE_RECORD_TYPE</td>
+    <td>
+      <table border="0">
+        <tr>
+          <th align="right">Data Type:</th>
+          <td><code>org.apache.ibatis.ibator.api.dom.java.FullyQualifiedJavaType</code></td>
+        </tr>
+        <tr>
+          <th align="right">Setter:</th>
+          <td><code>setBaseRecordType</code></td>
+        </tr>
+        <tr>
+          <th align="right">Getter:</th>
+          <td><code>getBaseRecordType</code></td>
+        </tr>
+        <tr>
+          <th align="right" valign="top">Description:</th>
+          <td>The fully qualified type of the base record.
+              By default, this will be the
+              <code>targetPackage</code> specified in the
+              <code>&lt;javaModelGenerator&gt;</code>
+              configuration, plus the sub-package if sub-packages are enabled,
+              plus the calculated domain object name.</td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
+
+</body>
+</html>
