@@ -23,6 +23,7 @@ with Ibator.</p>
   <li><a href="building.html">Building Ibator from Source</a></li>
   <li><a href="extending.html">Extending Ibator</a></li>
   <li><a href="pluggingIn.html">Implementing Ibator Plugins</a></li>
+  <li><a href="attributes.html">Introspected Table Attributes</a></li>
   <li><a href="logging.html">Logging Information</a></li>
 </ul>
 </body>
