@@ -97,6 +97,7 @@
       SqlMap namespace, and the calculated runtime table names.  These can now be overridden in
       plugins.</li>
   <li>Fixed addCriterionfor JDBC* methods so that they all do a null check.</li>
+  <li>Fixed IbatorRunner so that configuration errors are shown (thanks to Karel Rank)</li>
 </ul>
 
 <h2>Version 1.2.1</h2>
