@@ -81,6 +81,7 @@ Progress.12=Generating SQL Map for table {0}
 Progress.13=Found SQL Statement: {0}
 Progress.14=Generating DAO Interface and Implementation for table {0}
 Progress.15=Saving file {0}
+Progress.16=Invalid configuration.  Details follow...
 
 Tracing.1=Retrieving column information for table "{0}"
 Tracing.2=Found column "{0}", data type {1}, in table "{2}"
